--- a/index.html
+++ b/index.html
@@ -5,14 +5,47 @@
         <meta name="author" content="Brandon Davis">
         <meta name="description" content="Quick and customizable password generator">
         <link rel="stylesheet" type="text/css" href="style.css">
+
         <script src="script.js" defer></script>
         <title>Password Generator</title>
     </head>
     <body>
-        <div>Password Generator</div>
-        <div class="string"></div>
-        <div class="toolbar">
-
+        <div class="container">
+            <div class="title">Password Generator</div>
+            <div class="string">string</div>
+            <div class="toolbar">
+                <div class="character-container">
+                    <label for="range-character-length">Character Length</label>
+                    <span id="character-length-output">0</span>
+                    <div>
+                        <input type="range" id="range-character-length">
+                    </div>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" id="checkbox-include-uppercase">
+                    <label for="checkbox-include-uppercase">Include Uppercase Letters</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" id="checkbox-include-lowercase">
+                    <label for="checkbox-include-lowercase">Include Lowercase Letters</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" id="checkbox-include-numbers">
+                    <label for="checkbox-include-numbers">Include Numbers</label>
+                </div>
+                <div class="checkbox">
+                    <input type="checkbox" id="checkbox-include-symbols">
+                    <label for="checkbox-include-symbols">Include Symbols</label>
+                </div>
+                <div class="strength-container">
+                    STRENGTH
+                    <span id="strength-output">strength</span>
+                </div>
+                <div>
+                    <input type="button" id="generate" value="GENERATE">
+                </div>
+            </div>
         </div>
+    </div>
     </body>
 </html>
