Refined css and added slider

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             <div class="string">string</div>
             <div class="toolbar">
                 <div class="character-container">
-                    <label for="range-character-length">Character Length</label>
-                    <span id="character-length-output">0</span>
-                    <div>
-                        <input type="range" id="range-character-length">
+                    <div class="flex-container">
+                        <div id="character-length">Character Length</div>
+                        <div id="character-length-output">0</div>
+                    </div>
+                    <div class ="slider-container">
+                        <input type="range" min="1" max="32" value="12" class="slider" id="range-character-length">
                     </div>
                 </div>
 
